<resources>
    <string name="app_name">Apployment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_tienes_una_cuenta_crea_una">¿No tienes una cuenta? Crea una.</string>
    <string name="inicio_de_sesi_n">Inicio de Sesión</string>
    <string name="ingrese_correo_electr_nico">Ingrese correo electrónico</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="perfil">Perfil</string>
    <string name="ingrese_su_nombre">Ingrese su Nombre</string>
    <string name="sign_up">REGISTRARSE</string>
    <string name="ingrese_un_usuario">Ingrese un usuario</string>
    <string name="ingrese_su_correo">Ingrese su correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirme_su_contrase_a">Confirme su contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="user_name">User Name</string>
    <string name="descripcion_de_la_publicacion">Descripcion de la publicacion</string>
    <string name="like">like</string>
    <string name="ver_mas">ver mas</string>
    <string name="detalles_de_la_publicacion">Detalles de la publicacion</string>
    <string name="whatsapp">whatsapp</string>
    <string name="facebook">facebook</string>
    <string name="telefono">telefono</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="fecha">Fecha</string>
    <string name="apployment">Apployment</string>
    <string name="logo_description">logo_description</string>
    <string name="bienvenido_a">Bienvenido(a)</string>
    <string name="agregar_publicaci_n">Agregar Publicación</string>
    <string name="phone_icon">phone_icon</string>
    <string name="email_icon">email icon</string>
    <string-array name="gender_options">
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>

</resources>