<?xml version="1.0" encoding="utf-8"?>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="#CCB7E1"
        android:gravity="center"
        android:padding="10dp"
        tools:context=".SpScreen">

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="350dp"
            android:layout_margin="50dp"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="8dp"
            app:cardCornerRadius="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-20dp"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="@string/apployment"
                    android:textColor="@android:color/black"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="280dp"
                    android:layout_height="240dp"
                    android:contentDescription="@string/logo_description"
                    android:src="@drawable/logo" />

                <TextView
                    android:id="@+id/textViewTitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-20dp"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="@string/bienvenido_a"
                    android:textColor="@android:color/black"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </FrameLayout>
