<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#BB86FC"
    android:gravity="center"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:background="#BB86FC"
        android:layout_marginTop="500dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        >
        <LinearLayout

            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#453C56"
            android:orientation="vertical"
            tools:context=".MainActivity"
            android:padding="10dp"

            >

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:hint="@string/sign_up"
                android:importantForAutofill="no"
                android:textSize="50dp"
                android:minHeight="48dp"
                android:textColorHint="#FFFFFF"
                tools:ignore="SpUsage,TextFields" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:clipToOutline="true"
                android:contentDescription="@string/perfil"
                app:srcCompat="@drawable/perfil"
                tools:ignore="UnusedAttribute,ImageContrastCheck" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColorHint="@color/white"
                app:startIconTint="@color/white"
                app:startIconDrawable="@drawable/icon_person"
                app:helperTextTextColor="@color/white"
                app:helperText="* requerido"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="325dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:id="@+id/Nom"
                    android:hint="      Nombre" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColorHint="@color/white"
                app:startIconTint="@color/white"
                app:startIconDrawable="@drawable/icon_person"
                app:helperTextTextColor="@color/white"
                app:helperText="* requerido"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="325dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:id="@+id/username"
                    android:hint="      Usuario" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColorHint="@color/white"
                app:startIconTint="@color/white"
                app:startIconDrawable="@drawable/icon_email"
                app:helperTextTextColor="@color/white"
                app:helperText="* requerido"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="325dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/Email"
                    android:hint="      Correo" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/icon_lock"
                android:layout_gravity="center"
                android:textColorHint="@color/white"
                app:helperText="* requerido"
                app:helperTextTextColor="@color/white"
                app:startIconTint="@color/white"
                app:counterEnabled="true"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/white"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password"
                    android:textColor="@color/white"
                    android:inputType="textPassword"

                    android:hint="      Clave" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/icon_lock"
                android:layout_gravity="center"
                android:textColorHint="@color/white"
                app:helperText="* requerido"
                app:helperTextTextColor="@color/white"
                app:startIconTint="@color/white"
                app:counterEnabled="true"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/white"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ConfirmPass"
                    android:textColor="@color/white"
                    android:inputType="textPassword"

                    android:hint="      Confirmar Clave" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/registrarse"
                android:textColor="#FFFFFF"
                android:textSize="16sp">

            </Button>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                >

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:importantForAutofill="no"
                    android:minHeight="48dp"
                    android:text="@string/ya_tienes_cuenta"
                    android:textColor="#ffffff"
                    tools:ignore="TextFields,TextSizeCheck"></TextView>

                <TextView
                    android:id="@+id/txtloginlink"
                    android:layout_width="175dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:text="@string/iniciar_sesi_n"
                    android:textColor="#FFFFFF"
                    tools:ignore="Autofill,TextFields,TextViewEdits,TouchTargetSizeCheck"
                    android:autoLink="web"
                    android:inputType="textUri"
                    android:linksClickable="true">

                </TextView>
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
